# qttestproject

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
data/: data.qrc
data/style/: style.css
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  iconloader.cpp  iconloader.h  logging.cpp  logging.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
